- Fixed bug sending wrong text color out.. green text
- added delete contact menu item
- implemented requestAddContact panels.. xx has added you, add them?
- Fixed crashes caused by poorly formed dock icon packs
- autolink improvements
- fixed issue preventing mobile and ICQ service types from showing up
- AIM escapes (%n %d, etc) are now processed in links.. fixed subprofile links



Version 0.56 (5/14/2004)
- Added 'Insert Emoticon' to the Edit menu, contextual menus
- Added support for viewing the correct status of yahoo contacts
- Improved Event Notifications (Formerly Event Bezel), available globally or as a contact alert.
- Improved Message View preferences
- Restored the 'New Message' toolbar item
- Fixed a crash when selecting a custom message color
- Fixed a crash when deleting contacts
- Fixed a crash on launch under 10.2
- Fixed an issue with offline contacts not appearing after a disconnect
- Fixed an issue causing profile formatting to reset
- Fixed an issue with LaTeX operations containing \;
- Fixed an issue with pasting text into the link editor
- Fixed an issue with contact name format displaying incorrectly on launch
- Fixed a beach-balling issue
- Fixed several memory leaks

Version 0.55 (5/8/2004)
- Fixed a crash when connecting to a Yahoo account with privacy settings enabled
- Fixed formatting when sending messages to oneself via MSN
- Fixed a crash when editing links that are in the view at load time
- Fixed emoticon pack loading to ignore empty packs
- Fixed a bug preventing Jabber names with "-" in them from connecting
- Fixed a crash when quitting while a tooltip is visible
- Fixed a bug causing passwords to be cleared unnecessarily, particularly when network errors occurred while connecting
- Disabled dragging web links into the message view
- Added advanced Webkit Message View preferences, which currently allow the customization of the contact name display in the message view.
- Improved menu performance

Version 0.54 (5/7/2004)