@@ -8687,8 +8687,8 @@
 		4947F5EA0655E90C00B791E5 = {
 			children = (
 				6CED9083065B686A00A9C196,
-				4BCDC2AA065B811F000C2059,
-				4BCDC2AB065B811F000C2059,
+				C438C51D065C83B90066D199,
+				C438C51E065C83B90066D199,
 			);
 			isa = PBXGroup;
 			name = Products;
@@ -13653,36 +13653,6 @@
 			path = "Plugins/Default Formatting/DefaultFormattingPrefs.nib";
 			refType = 4;
 			sourceTree = "<group>";
-		};
-		4BCDC2AA065B811F000C2059 = {
-			fileType = "compiled.mach-o.dylib";
-			isa = PBXReferenceProxy;
-			path = libezv.dylib;
-			refType = 3;
-			remoteRef = 4BCDC503065B813D000C2059;
-			sourceTree = BUILT_PRODUCTS_DIR;
-		};
-		4BCDC2AB065B811F000C2059 = {
-			fileType = archive.ar;
-			isa = PBXReferenceProxy;
-			path = libezv.a;
-			refType = 3;
-			remoteRef = 4BCDC504065B813D000C2059;
-			sourceTree = BUILT_PRODUCTS_DIR;
-		};
-		4BCDC503065B813D000C2059 = {
-			containerPortal = 4947F5E90655E90C00B791E5;
-			isa = PBXContainerItemProxy;
-			proxyType = 2;
-			remoteGlobalIDString = D2AAC0C705546C1D00DB518D;
-			remoteInfo = libezv;
-		};
-		4BCDC504065B813D000C2059 = {
-			containerPortal = 4947F5E90655E90C00B791E5;
-			isa = PBXContainerItemProxy;
-			proxyType = 2;
-			remoteGlobalIDString = 496F57B805CE4DD800B6A0F5;
-			remoteInfo = "libezv (Static)";
 		};
 		4BCDEB2E03D4CACA00A8010A = {
 			children = (
@@ -20154,6 +20124,36 @@
 			path = "Plugins/Contact Notes/ContactNotes.nib";
 			refType = 4;
 			sourceTree = "<group>";
+		};
+		C438C51D065C83B90066D199 = {
+			fileType = "compiled.mach-o.dylib";
+			isa = PBXReferenceProxy;
+			path = libezv.dylib;
+			refType = 3;
+			remoteRef = C438C51F065C83BC0066D199;
+			sourceTree = BUILT_PRODUCTS_DIR;
+		};
+		C438C51E065C83B90066D199 = {
+			fileType = archive.ar;
+			isa = PBXReferenceProxy;
+			path = libezv.a;
+			refType = 3;
+			remoteRef = C438C520065C83BC0066D199;
+			sourceTree = BUILT_PRODUCTS_DIR;
+		};
+		C438C51F065C83BC0066D199 = {
+			containerPortal = 4947F5E90655E90C00B791E5;
+			isa = PBXContainerItemProxy;
+			proxyType = 2;
+			remoteGlobalIDString = D2AAC0C705546C1D00DB518D;
+			remoteInfo = libezv;
+		};
+		C438C520065C83BC0066D199 = {
+			containerPortal = 4947F5E90655E90C00B791E5;
+			isa = PBXContainerItemProxy;
+			proxyType = 2;
+			remoteGlobalIDString = 496F57B805CE4DD800B6A0F5;
+			remoteInfo = "libezv (Static)";
 		};
 		C4947AFF05BD177E00780FE2 = {
 			fileEncoding = 30;
